--- a/roles/drbd/tasks/lvm.yml
+++ b/roles/drbd/tasks/lvm.yml
@@ -2,16 +2,16 @@
 - name: Create volume group
   lvg:
     vg: drbdpool
-    pvs: 
-      - { disk_1 }
-      - { disk_2 }
+    pvs: "{{ disks }}"
 
 - name: Create volumes
   lvol:
-    vg: { vg_name }
-    lv: { lv_name }
-    size: { volume_size }
+    vg: "{{ vg_name }}"
+    lv: "{{ lv_name }}"
+    size: "{{ volume_size }}"
 
 - name: Convert volume to thin-pool
-  shell: "lvconvert --type thin-pool { vg_name }/{ vg_name }"
-
+  command: "lvconvert --type thin-pool -y {{ vg_name }}/{{ lv_name }}"
+  register: result
+  failed_when: not result.stderr.endswith("is already pool.")
+ 
