--- a/roles/drbd/tasks/drbd_cluster.yml
+++ b/roles/drbd/tasks/drbd_cluster.yml
@@ -8,29 +8,32 @@
     - lvm2
     - drbdmanage 
 
+- name: Debugging
+  debug:
+    msg: "System {{ ansible_hostname }}  {{ groups['drbd_master'] }}"
 
 - name: Initiallizing Cluster only on master node
   command: echo yes | drbdmanage init 
-  when: inventory_hostname in group_names['drbd_master']
+  when: ansible_default_ipv4["address"] in groups['drbd_master']
 
 - name: Add Nodes
   shell: drbdmanage add-node {{ ansible_hostname }} {{ ansible_default_ipv4["address"] }}
-  when: ansible_host not in group_names['drbd_master']
+  when: ansible_default_ipv4["address"] not in groups['drbd_master']
 
 - name: How to Join
   shell: drbdmanage howto-join {{ item }}
-  with_items: groups_names['drbd_agents']
+  with_items: groups['drbd_agents']
   register: howto_join
-  when: ansible_host in group_names['drbd_master']
+  when: ansible_default_ipv4["address"] in groups['drbd_master']
 
 - name: Agents join in cluster
-  shell: {{ howto_join }}
-  when: ansible_host not in group_names['drbd_master']
+  shell: "{{ item  }}"
+  when: ansible_default_ipv4["address"] not in groups['drbd_master']
   with_items: "{{ howto_join.results }}"
 
 - name: Modify config
   shell: drbdmanage modify-config --node {{ ansible_hostname }}
   register: editing_config
 
-- name: Comment out config
+#- name: Comment out config
   
