--- a/main.yml
+++ b/main.yml
@@ -1,9 +1,9 @@
 ---
 - hosts: all
   roles:
-    - proxmox
+    - drbd
      
   vars_files:
-    - group_vars/drbd_hosts
+    - group_vars/test1_drbd_cluster
     
   
