--- a/roles/drbd/tasks/lvm.yml
+++ b/roles/drbd/tasks/lvm.yml
@@ -2,16 +2,16 @@
 - name: Create volume group
   lvg:
     vg: drbdpool
-    pvs: "{{ disks }}"
+    pvs: "{{ drbd_disks }}"
 
 - name: Create volumes
   lvol:
-    vg: "{{ vg_name }}"
-    lv: "{{ lv_name }}"
-    size: "{{ volume_size }}"
+    vg: "{{ drbd_vg_name }}"
+    lv: "{{ drbd_lv_name }}"
+    size: "{{ drbd_volume_size }}"
 
 - name: Convert volume to thin-pool
-  command: "lvconvert --type thin-pool -y {{ vg_name }}/{{ lv_name }}"
+  command: "lvconvert --type thin-pool -y {{ drbd_vg_name }}/{{ drbd_lv_name }}"
   register: result
   failed_when: not result.stderr.endswith("is already pool.")
  
