--- a/roles/drbd/tasks/drbd_setup.yml
+++ b/roles/drbd/tasks/drbd_setup.yml
@@ -9,11 +9,18 @@
     repo: "deb https://packages.linbit.com/proxmox/ proxmox-4 drbd-9.0"
     state: present
 
-- name: Update apt cache - Ignoring enterpise repo...
+- name: Comment proxmox enterprise repository
+  lineinfile: 
+     dest: /etc/apt/sources.list.d/pve-enterprise.list
+     regexp: '^deb'
+     insertbefore: '^deb' 
+     line: '#'
+     state: present
+
+- name: Update apt cache
   apt:
     update_cache: yes
     state: latest
-  ignore_errors: yes
 
 - name: Installation of drbdmanage-proxmox
   apt:
