--- a/roles/drbd/tasks/lvm.yml
+++ b/roles/drbd/tasks/lvm.yml
@@ -11,7 +11,7 @@
     size: "{{ drbd_volume_size }}"
 
 - name: Convert volume to thin-pool
-  command: "lvconvert --type thin-pool -y {{ drbd_vg_name }}/{{ drbd_lv_name }}"
+  command: "lvconvert --type thin-pool -y --force {{ drbd_vg_name }}/{{ drbd_lv_name }}"
   register: result
   failed_when: not result.stderr.endswith("is already pool.")
  
