--- a/roles/drbd/tasks/lvm.yml
+++ b/roles/drbd/tasks/lvm.yml
@@ -11,5 +11,5 @@
     size: "{{ drbd_volume_size }}"
 
 - name: Convert volume to thin-pool
-  command: "lvconvert --type thin-pool -y --force {{ drbd_vg_name }}/{{ drbd_lv_name }}"
+  command: "lvconvert --force --type thin-pool -y {{ drbd_vg_name }}/{{ drbd_lv_name }}"
  
