--- a/roles/drbd/tasks/drbd_cluster.yml
+++ b/roles/drbd/tasks/drbd_cluster.yml
@@ -41,13 +41,13 @@
     msg: " ITEM HAS STDOUT: {{ item.get('stdout', 'mpampmplamp') }}"
   with_items: "{{ howto_join['results'] }}"
 
-#- name: Debug How to join
-#  debug:
-#    var: hostvars[drbd_primary_node]['howto_join']['results']
+- name: Debug How to join
+  debug:
+    var: hostvars[drbd_primary_node]['howto_join']['results']
 
 - name: Agents join in cluster
   command: "{{ item['stdout'] }}"
-  when: inventory_hostname in drbd_agents
+  when: inventory_hostname in drbd_agents and item['item'] == inventory_hostname
   with_items: hostvars[drbd_primary_node]['howto_join']['results']
 
 - name: Restart Drbdmanage at all
