--- a/roles/drbd/tasks/lvm.yml
+++ b/roles/drbd/tasks/lvm.yml
@@ -12,4 +12,4 @@
 
 - name: Convert volume to thin-pool
   command: "lvconvert --force --type thin-pool -y {{ drbd_vg_name }}/{{ drbd_lv_name }}"
- 
+  ignore_errors: yes
