--- a/roles/drbd/tasks/main.yml
+++ b/roles/drbd/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- include: lvm.yml
-- include: drbd_setup.yml
-- include: drbd_cluster.yml
+#- include: lvm.yml
+#- include: drbd_setup.yml
+#- include: drbd_cluster.yml
 - include: storage_plugin.yml
