--- a/roles/drbd/tasks/drbd_cluster.yml
+++ b/roles/drbd/tasks/drbd_cluster.yml
@@ -23,23 +23,19 @@
 
 - name: Add Nodes
   shell: drbdmanage add-node {{ hostvars[item]['inventory_hostname_short'] }} {{ hostvars[item]['ansible_default_ipv4']["address"] }}
-  with_items: drbd_agents 
+  with_items: "{{ drbd_agents }}"
   when: inventory_hostname == drbd_primary_node
 
 - name: How to Join
   shell: drbdmanage howto-join -q {{ hostvars[item]['inventory_hostname_short'] }}
-  with_items: drbd_agents
+  with_items: "{{ drbd_agents }}"
   register: howto_join
   when: inventory_hostname == drbd_primary_node and item in drbd_agents
-
-- name: Debug How to join
-  debug:
-    var: hostvars[drbd_primary_node]['howto_join']['results']
 
 - name: Agents join in cluster
   command: "{{ item['stdout'] }}"
   when: inventory_hostname in drbd_agents and item['item'] == inventory_hostname
-  with_items: hostvars[drbd_primary_node]['howto_join']['results']
+  with_items: "{{ hostvars[drbd_primary_node]['howto_join']['results'] }}"
 
 - name: Restart Drbdmanage at all
   command: drbdmanage restart -q
