--- a/roles/drbd/tasks/storage_plugin.yml
+++ b/roles/drbd/tasks/storage_plugin.yml
@@ -1,4 +1,7 @@
 ---
+- name: Optional timout for dbus crash....
+  pause:
+    seconds: 20
 - name: Create script - Storage Plugin
   template:
     src: storage_plugin.sh.j2
