fix ssh changes for ansible 2.0

--- a/roles/proxmox/tasks/proxmox_cluster.yml
+++ b/roles/proxmox/tasks/proxmox_cluster.yml
@@ -13,7 +13,7 @@
 
 - name: Nodes add themselves in cluster
   shell: pvecm add {{ item }} --force
-  with_items: hostvars[proxmox_primary_node]['ansible_default_ipv4']["address"]
+  with_items: "{{ hostvars[proxmox_primary_node]['ansible_default_ipv4']["address"] }}"
   when: inventory_hostname in proxmox_agents
 
 - name: Add drbdstorage configuration in /etc/pve/drbdstorage.cfg
