--- a/roles/ssh/tasks/config.yml
+++ b/roles/ssh/tasks/config.yml
@@ -1,19 +1,22 @@
 ---
-- name: Cat public keys of hosts
+- name: Cat public keys
   shell: cat /root/.ssh/id_rsa.pub
   register: public_key
 
-- name:
+- name: Hosts exchanges their hosts
   authorized_key:
     user: root
     state: present
     key: "{{ hostvars[item]['public_key']['stdout'] }}"
-  with_items: "{{ groups[target + '_drbd_nodes'] }}"
+  with_items: "{{groups[target+'_drbd_nodes']}}"
   when: item != inventory_hostname
+
+
 
 - name: Known Hosts
   known_hosts:
     path: ~/root/.ssh/known_hosts
     name: "{{ groups[target + '_drbd_nodes'][0] }}"
-    key: "{{ hostvars[groups[target + '_drbd_nodes'][0]]['public_key']['stdout'] }}"
-  when: inventory_hostname != groups[target + '_drbd_nodes'][0]
+    key: "{{ hostvars[item]['public_key']['stdout'] }}"
+  with_items: "{{ groups[target + 'drbd_nodes'] }}"
+  when: item == inventory_hostname
