--- a/roles/proxmox/tasks/proxmox_cluster.yml
+++ b/roles/proxmox/tasks/proxmox_cluster.yml
@@ -11,9 +11,12 @@
   shell: pvecm create my-cluster
   when: inventory_hostname_short in proxmox_primary_node
 
+- name: Pause Playbook
+  pause:
+    seconds: 10
+
 - name: Nodes add themselves in cluster
-  shell: pvecm add {{ item }} --force
-  with_items: "{{ hostvars[proxmox_primary_node]['ansible_hostname'] }}"
+  command: pvecm add {{ proxmox_primary_node }} --force
   when: inventory_hostname in proxmox_agents
 
 - name: Add drbdstorage configuration in a storage file
