--- a/roles/drbd/tasks/storage_plugin.yml
+++ b/roles/drbd/tasks/storage_plugin.yml
@@ -13,6 +13,8 @@
   environment:
     EDITOR: /etc/storage_plugin.sh
   with_items: "{{ groups[target+'_drbd_nodes'] }}"
+  loop_control:
+    pause: 5
   when: inventory_hostname == groups[target+'_drbd_nodes'][0]
 
 - name: Delete script
