changes in drbd_cluster, proxmox_cluster

--- a/main.yml
+++ b/main.yml
@@ -1,9 +1,9 @@
 ---
 - hosts: all
   roles:
-#     - drbd
      - ssh
      - proxmox
+     - drbd
   vars_files:
     - group_vars/test1_drbd_cluster
     
