--- a/roles/drbd/tasks/drbd_cluster.yml
+++ b/roles/drbd/tasks/drbd_cluster.yml
@@ -22,22 +22,32 @@
 
 
 - name: Add Nodes
-  shell: drbdmanage add-node {{ hostvars[item]['inventory_hostname_short'] }} {{ hostvars[item]['ansible_default_ipv4']["address"] }}
+  command: drbdmanage add-node {{ hostvars[item]['inventory_hostname_short'] }} {{ hostvars[item]['ansible_default_ipv4']["address"] }}
   with_items: "{{ drbd_agents }}"
+  register: add_node_command
+  until: add_node_command.rc == 0
+  retries: 5
   when: inventory_hostname == drbd_primary_node
 
-- name: Optional pause for DBus
- - name: How to Join
-  shell: drbdmanage howto-join -q {{ hostvars[item]['inventory_hostname_short'] }}
+- name: How to Join
+  command: drbdmanage howto-join -q {{ hostvars[item]['inventory_hostname_short'] }}
   with_items: "{{ drbd_agents }}"
-   register: howto_join
+  register: howto_join
+  until: howto_join.rc == 0
+  retries: 5
   when: inventory_hostname == drbd_primary_node and item in drbd_agents
+
+- name: Restart drbdmanage
+  command: drbdmanage restart -q
 
 - name: Agents join in cluster
   command: "{{ item['stdout'] }}"
-  when: inventory_hostname in drbd_agents and item['item'] == inventory_hostname
   with_items: "{{ hostvars[drbd_primary_node]['howto_join']['results'] }}"
- 
+  register: command_output
+  until: command_output.rc == 0
+  retries: 5
+  when: inventory_hostname in drbd_agents and item['item'] == inventory_hostname
+
 - name: Restart Drbdmanage at all
   command: drbdmanage restart -q
  
