--- a/roles/proxmox/tasks/proxmox_cluster.yml
+++ b/roles/proxmox/tasks/proxmox_cluster.yml
@@ -1,15 +1,15 @@
 ---
-#- name: Comment proxmox enterprise repository
-#  lineinfile:
-#     dest: /etc/apt/sources.list.d/pve-enterprise.list
-#     regexp: '^'
-#     line: '#deb https://enterprise.proxmox.com/debian stretch pve-enterprise'
-#     state: present
-#
-#- name: Updates
-#  apt:
-#    update_cache: yes
-#    upgrade: dist
+- name: Comment proxmox enterprise repository
+  lineinfile:
+     dest: /etc/apt/sources.list.d/pve-enterprise.list
+     regexp: '^'
+     line: '#deb https://enterprise.proxmox.com/debian stretch pve-enterprise'
+     state: present
+
+- name: Updates
+  apt:
+    update_cache: yes
+    upgrade: dist
 
 - name: Set fact Proxmox master
   set_fact:
@@ -25,16 +25,20 @@
   ignore_errors: yes
 
 - name: Nodes add themselves in cluster
-  command: pvecm add {{ proxmox_primary_node }} --force 1
+  command: pvecm add {{ proxmox_primary_node }} -force
   register: result
   until: result.rc == 0
   retries: 5
   when: inventory_hostname in proxmox_agents
-  
-
+ 
 - name: Add drbdstorage configuration in a storage file
   template:
     src: storage.cfg.j2
-    dest: /etc/pve/storage.cfg 
+    dest: /tmp/storage.cfg
+    owner: root
+    group: www-data
   when: inventory_hostname == proxmox_primary_node
 
+- name: Copy storage.cfg to /etc/pve
+  shell: cp /tmp/storage.cfg /etc/pve/ && rm /tmp/storage.cfg
+  when: inventory_hostname == proxmox_primary_node
