--- a/roles/proxmox/tasks/proxmox_cluster.yml
+++ b/roles/proxmox/tasks/proxmox_cluster.yml
@@ -1,60 +1,23 @@
 ---
-- name: Comment proxmox enterprise repository
-  lineinfile:
-    dest: /etc/apt/sources.list.d/pve-enterprise.list
-    regexp: '^'
-    line: '#deb https://enterprise.proxmox.com/debian stretch pve-enterprise'
-    state: present
-
-- name: Touch repo file
-  shell: touch /etc/apt/sources.list.d/proxmox.list
-
-- name: Add Proxmox repo
-  lineinfile:
-    dest: /etc/apt/sources.list.d/proxmox.list
-    regexp: '^'
-    line: 'deb http://download.proxmox.com/debian jessie pve-no-subscription'
-
-- name: Updates
-  apt:
-    update_cache: yes
-    upgrade: dist
-
-- name: Reboot
-  shell: reboot
-  async: yes
-  when: reboot | default(False)
-
-- name: Wait for reboot
-  wait_for:
-    port: 22
-    state: stopped
-  when: reboot | default(False)
-
-- name: local action
-  wait_for:
-    port: 22
-    host: "{{ ansible_default_ipv4.address }}"
-    timeout: 60
-  delegate_to: localhost
-
-- name: Wait to start hosts
-  wait_for:
-    port: 8006
-    state: started
-    
 - name: Set fact Proxmox master
   set_fact:
     proxmox_primary_node: "{{ groups[target+'_drbd_nodes'][0] }}"
+  tags:
+    - cluster
 
 - name: Set fact for Proxmox agents
   set_fact:
     proxmox_agents: "{{ groups[target+'_drbd_nodes'][1:] }}"
-  
+  tags:
+    - cluster
+
 - name: Create a cluster on master
   shell: pvecm create my-cluster
+  register: cluster_init
   when: inventory_hostname_short in proxmox_primary_node
-  ignore_errors: yes
+  failed_when: not "'cluster config '/etc/pve/corosync.conf' already exists' in cluster_init.stderr"
+  tags:
+    - cluster
 
 - name: Nodes add themselves in cluster
   command: pvecm add {{ proxmox_primary_node }} -force
@@ -62,6 +25,8 @@
   until: result.rc == 0
   retries: 5
   when: inventory_hostname in proxmox_agents
+  tags:
+    - cluster
  
 - name: Add drbdstorage configuration in a storage file
   template:
@@ -70,7 +35,11 @@
     owner: root
     group: www-data
   when: inventory_hostname == proxmox_primary_node
+  tags:
+    - cluster
 
 - name: Copy storage.cfg to /etc/pve
   shell: cp /tmp/storage.cfg /etc/pve/ && rm /tmp/storage.cfg
   when: inventory_hostname == proxmox_primary_node
+  tags:
+    - storage
