--- a/roles/drbd_node_add/tasks/drbd_node_add.yml
+++ b/roles/drbd_node_add/tasks/drbd_node_add.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Set fact for primary
+- name: Set fact for primary node
   set_fact:
     drbd_primary_node: "{{ groups[target+'_drbd_nodes'][0] }}"
 
@@ -8,7 +8,7 @@
   set_fact:
     drbd_agents: "{{ groups[target+'_drbd_nodes'][1:] }}"
 
-- name: Add Nodes
+- name: Primary node add agents in cluster
   command: drbdmanage add-node {{ hostvars[item]['inventory_hostname_short'] }} {{ hostvars[item]['ansible_default_ipv4']["address"] }}
   with_items: "{{ drbd_agents }}"
   register: add_node_command
@@ -17,7 +17,7 @@
   when: inventory_hostname == drbd_primary_node
 
 
-- name: How to Join
+- name: Primary node, executing "drbdmanage howto-join ... "
   command: drbdmanage howto-join -q {{ hostvars[item]['inventory_hostname_short'] }}
   with_items: "{{ drbd_agents }}"
   register: howto_join
@@ -27,7 +27,7 @@
   tags:
     - drbd_node_add
 
-- name: Agents join in cluster
+- name: Agents get stdout of "drbdmanage howto-join" and join in cluster
   shell: "{{ item['stdout'] }}"
   with_items: "{{ hostvars[drbd_primary_node]['howto_join']['results'] }}"
   register: command_output
