--- a/main.yml
+++ b/main.yml
@@ -1,12 +1,11 @@
 ---
-#- hosts: "{{ target + '_drbd_nodes' }}"
-#  roles:
-#     - common
-#     - proxmox
+- hosts: "{{ target + '_drbd_nodes' }}"
+  roles:
+     - common
    
-#- hosts: "{{ target + '_drbd_nodes' }}"
-#  roles:
-#    - role: drbd_init
+- hosts: "{{ target + '_drbd_nodes' }}"
+  roles:
+    - role: drbd_init
 
 - hosts: "{{ target + '_drbd_nodes' }}"
 #  serial: 1
@@ -16,4 +15,8 @@
 - hosts: "{{ target + '_drbd_nodes' }}"
   roles:
     - role: drbd_storage_plugin
+
+- hosts: "{{ target + '_drbd_nodes' }}"
+  roles:
+    - role: proxmox
 
